--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
             <h3>Discord:</h3>
             <p><a href="https://discord.gg/dTTdNrgBSM" target="_blank">Pripojte sa na Discord</a></p>
         </div>
+
+        <hr>
+
+        <div class="info">
+            <a href="otvaracie_casy.html">Otvaracie časy</a>
+        </div>
     </div>
 
     <script>
