--- a/otvaracie_casy.html
+++ b/otvaracie_casy.html
@@ -34,6 +34,7 @@
         .info {
             font-size: 1.2em;
             margin-top: 20px;
+            line-height: 1.5em;
         }
         a {
             color: #0d9dff;
@@ -44,14 +45,20 @@
             width: 80%;
             margin: 20px auto;
         }
+        .day {
+            margin: 10px 0;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Otvaracie časy</h1>
         <div class="info">
-            <p><strong>Cez týždeň:</strong> 16:00 - 22:00</p>
-            <p><strong>Cez víkend:</strong> Podľa dohody</p>
+            <p class="day"><strong>Pondelok:</strong> 9:30 - 14:30, 16:00 - 21:30</p>
+            <p class="day"><strong>Utorok:</strong> 9:30 - 14:30, 16:00 - 21:30</p>
+            <p class="day"><strong>Streda:</strong> 9:30 - 14:30, 16:00 - 21:30</p>
+            <p class="day"><strong>Štvrtok:</strong> 9:30 - 14:30, 16:00 - 21:30</p>
+            <p class="day"><strong>Piatok:</strong> 9:30 - 12:40</p>
         </div>
 
         <hr>
