--- a/otvaracie_casy.html
+++ b/otvaracie_casy.html
@@ -10,7 +10,6 @@
             font-family: Arial, sans-serif;
             background-color: #2e2e2e;
             color: #ffffff;
-            text-align: center;
             padding: 0;
             margin: 0;
             display: flex;
@@ -26,10 +25,12 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             max-width: 600px;
             width: 90%;
+            text-align: left; /* Align text to the left */
         }
         h1 {
             font-size: 2em;
             color: #f0d600;
+            text-align: center; /* Keep header centered */
         }
         .info {
             font-size: 1.2em;
