--- a/otvaracie_casy.html
+++ b/otvaracie_casy.html
@@ -58,8 +58,8 @@
             <p class="day"><strong>Pondelok:</strong> 9:30 - 14:30, 16:00 - 21:30</p>
             <p class="day"><strong>Utorok:</strong> 9:30 - 14:30, 16:00 - 21:30</p>
             <p class="day"><strong>Streda:</strong> 9:30 - 14:30, 16:00 - 21:30</p>
-            <p class="day"><strong>Štvrtok:</strong> 9:30 - 14:30, 16:00 - 21:30</p>
-            <p class="day"><strong>Piatok:</strong> 9:30 - 12:40</p>
+            <p class="day"><strong>Štvrtok:</strong> 9:30 - 15:45, 16:55 - 21:30</p>
+            <p class="day"><strong>Piatok:</strong> 9:30 - 12:40, 13:40 - 15:15</p>
         </div>
 
         <hr>
