--- a/otvaracie_casy.html
+++ b/otvaracie_casy.html
@@ -25,7 +25,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             max-width: 600px;
             width: 90%;
-            text-align: left; /* Align text to the left */
+            text-align: left;
         }
         h1 {
             font-size: 2em;
@@ -35,19 +35,27 @@
         .info {
             font-size: 1.2em;
             margin-top: 20px;
-            line-height: 1.5em;
+        }
+        .day {
+            display: flex;
+            justify-content: space-between; /* Align day and hours with space between */
+            margin: 10px 0;
+        }
+        .day strong {
+            min-width: 120px; /* Optional: Set a minimum width for day labels for consistency */
+            text-align: left;
         }
         a {
             color: #0d9dff;
             text-decoration: none;
+            text-align: center;
+            display: block;
+            margin-top: 20px;
         }
         hr {
             border: 1px solid #444;
             width: 80%;
             margin: 20px auto;
-        }
-        .day {
-            margin: 10px 0;
         }
     </style>
 </head>
@@ -55,11 +63,11 @@
     <div class="container">
         <h1>Otvaracie časy</h1>
         <div class="info">
-            <p class="day"><strong>Pondelok:</strong> 9:30 - 14:30, 16:00 - 21:30</p>
-            <p class="day"><strong>Utorok:</strong> 9:30 - 14:30, 16:00 - 21:30</p>
-            <p class="day"><strong>Streda:</strong> 9:30 - 14:30, 16:00 - 21:30</p>
-            <p class="day"><strong>Štvrtok:</strong> 9:30 - 15:45, 16:55 - 21:30</p>
-            <p class="day"><strong>Piatok:</strong> 9:30 - 12:40, 13:40 - 15:15</p>
+            <div class="day"><strong>Pondelok:</strong> <span>9:30 - 14:30, 16:00 - 21:30</span></div>
+            <div class="day"><strong>Utorok:</strong> <span>9:30 - 14:30, 16:00 - 21:30</span></div>
+            <div class="day"><strong>Streda:</strong> <span>9:30 - 14:30, 16:00 - 21:30</span></div>
+            <div class="day"><strong>Štvrtok:</strong> <span>9:30 - 15:45, 16:55 - 21:30</span></div>
+            <div class="day"><strong>Piatok:</strong> <span>9:30 - 12:40, 13:40 - 15:15</span></div>
         </div>
 
         <hr>
