--- a/otvaracie_casy.html
+++ b/otvaracie_casy.html
@@ -87,6 +87,14 @@
                 <td>Piatok</td>
                 <td>9:30 - 12:40, 13:40 - 15:15</td>
             </tr>
+            <tr>
+                <td>Sobota</td>
+                <td>Podľa dohody</td>
+            </tr>
+            <tr>
+                <td>Nedeľa</td>
+                <td>Podľa dohody</td>
+            </tr>
         </table>
         
         <a href="index.html">Späť na hlavnú stránku</a>
