--- a/index.html
+++ b/index.html
@@ -19,6 +19,66 @@
             justify-content: center;
             min-height: 100vh;
         }
+
+        /* Header and navigation styles */
+        .header {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background-color: #1a1a1a;
+            padding: 10px 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            display: flex;
+            justify-content: center;
+            z-index: 1000;
+        }
+
+        .navbar {
+            display: flex;
+            gap: 20px;
+            position: relative;
+        }
+
+        .navbar a {
+            color: #ffffff;
+            text-decoration: none;
+            padding: 10px 20px;
+            font-size: 1em;
+        }
+
+        /* Dropdown menu styling */
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #333333;
+            min-width: 160px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            z-index: 1;
+            top: 100%;
+        }
+
+        .dropdown-content a {
+            color: #ffffff;
+            padding: 10px 20px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #444;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        /* Main container styling */
         .container {
             background-color: #1a1a1a;
             padding: 20px;
@@ -26,11 +86,14 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             max-width: 600px;
             width: 90%;
+            margin-top: 60px; /* Space for fixed header */
         }
+
         h1 {
             font-size: 2em;
             color: #f0d600;
         }
+
         .status {
             font-size: 1.2em;
             margin: 20px 0;
@@ -41,14 +104,17 @@
         .status.offline {
             color: #ff0000;
         }
+
         .info {
             font-size: 1em;
             margin-top: 20px;
         }
+
         a {
             color: #0d9dff;
             text-decoration: none;
         }
+
         hr {
             border: 1px solid #444;
             width: 80%;
@@ -57,6 +123,21 @@
     </style>
 </head>
 <body>
+    <!-- Header with dropdown menu -->
+    <header class="header">
+        <div class="navbar">
+            <a href="index.html">Domov</a>
+            <div class="dropdown">
+                <a href="#">Informácie</a>
+                <div class="dropdown-content">
+                    <a href="otvaracie_casy.html">Otvaracie časy</a>
+                </div>
+            </div>
+            <a href="https://discord.gg/dTTdNrgBSM" target="_blank">Discord</a>
+        </div>
+    </header>
+
+    <!-- Main content container -->
     <div class="container">
         <h1>Minecraft Server SOSCH</h1>
         <div id="server-status" class="status">Kontrola stavu servera<span id="dots">...</span></div>
