--- a/otvaracie_casy.html
+++ b/otvaracie_casy.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
+   <div id="header-placeholder"></div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Otvaracie časy - Minecraft Server SOSCH</title>
