--- a/index.html
+++ b/index.html
@@ -4,11 +4,150 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minecraft Server SOSCH</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Basic reset and styling */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #2e2e2e;
+            color: #ffffff;
+            text-align: center;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
+
+        /* Header and navigation styles */
+        .header {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background-color: #1a1a1a;
+            padding: 10px 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            display: flex;
+            justify-content: center;
+            z-index: 1000;
+        }
+
+        .navbar {
+            display: flex;
+            align-items: center; /* Fix vertical alignment */
+            gap: 20px;
+            position: relative;
+        }
+
+        .navbar a {
+            color: #ffffff;
+            text-decoration: none;
+            padding: 10px 20px;
+            font-size: 1em;
+        }
+
+        /* Dropdown menu styling */
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown > a::after {
+            content: " ▼";
+            font-size: 0.8em;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #333333;
+            min-width: 160px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            z-index: 1;
+            top: 100%;
+            opacity: 0; /* For fade-in animation */
+            transform: translateY(-10px);
+            transition: opacity 0.3s ease, transform 0.3s ease;
+        }
+
+        .dropdown-content a {
+            color: #ffffff;
+            padding: 10px 20px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #444;
+        }
+
+        /* Show dropdown with animation */
+        .dropdown:hover .dropdown-content {
+            display: block;
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        /* Main container styling */
+        .container {
+            background-color: #1a1a1a;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            max-width: 600px;
+            width: 90%;
+            margin-top: 60px; /* Space for fixed header */
+        }
+
+        h1 {
+            font-size: 2em;
+            color: #f0d600;
+        }
+
+        .status {
+            font-size: 1.2em;
+            margin: 20px 0;
+        }
+        .status.online {
+            color: #00ff00;
+        }
+        .status.offline {
+            color: #ff0000;
+        }
+
+        .info {
+            font-size: 1em;
+            margin-top: 20px;
+        }
+
+        a {
+            color: #0d9dff;
+            text-decoration: none;
+        }
+
+        hr {
+            border: 1px solid #444;
+            width: 80%;
+            margin: 20px auto;
+        }
+    </style>
 </head>
 <body>
-    <!-- Include header component -->
-    <div id="header-placeholder"></div>
+    <!-- Header with dropdown menu -->
+    <header class="header">
+        <div class="navbar">
+            <a href="index.html">Domov</a>
+            <div class="dropdown">
+                <a href="#">Informácie</a>
+                <div class="dropdown-content">
+                    <a href="otvaracie_casy.html">Otvaracie časy</a>
+                </div>
+            </div>
+            <a href="https://discord.gg/dTTdNrgBSM" target="_blank">Discord</a>
+        </div>
+    </header>
 
     <!-- Main content container -->
     <div class="container">
@@ -40,7 +179,73 @@
         </div>
     </div>
 
-    <script src="header.js"></script>
-    <script src="scripts.js"></script>
+    <script>
+        // API URL for the Minecraft server status
+        const apiUrl = 'https://api.mcsrvstat.us/2/taking-superior.gl.joinmc.link';
+
+        // Dot animation function
+        function startLoadingDots(id) {
+            let dots = 0;
+            return setInterval(() => {
+                document.getElementById(id).textContent = '.'.repeat((dots % 4) + 1);
+                dots++;
+            }, 500);
+        }
+
+        // Start loading dots animation
+        const dotsInterval = startLoadingDots("dots");
+
+        async function checkServerStatus() {
+            try {
+                const response = await fetch(apiUrl);
+                const data = await response.json();
+                clearInterval(dotsInterval); // Stop the loading animation
+                document.getElementById("dots").textContent = ""; // Clear dots text
+
+                const statusElement = document.getElementById("server-status");
+                const playersElement = document.getElementById("player-info");
+
+                if (data.online) {
+                    // Update status to "Online" with green color
+                    statusElement.textContent = "Server je Online";
+                    statusElement.classList.add("online");
+                    statusElement.classList.remove("offline");
+
+                    // Show player count if available
+                    if (data.players) {
+                        const onlinePlayers = data.players.online;
+                        const maxPlayers = data.players.max;
+                        playersElement.innerHTML = `Počet hráčov online: ${onlinePlayers}/${maxPlayers}`;
+                    }
+                } else {
+                    // Update status to "Offline" with red color
+                    statusElement.textContent = "Server je Offline";
+                    statusElement.classList.add("offline");
+                    statusElement.classList.remove("online");
+
+                    // Show message that statistics couldn't be loaded
+                    playersElement.innerHTML = "Server je offline, nemožno načítať štatistiky.";
+                }
+            } catch (error) {
+                console.error('Chyba pri kontrole stavu servera:', error);
+                clearInterval(dotsInterval); // Stop the loading animation
+                document.getElementById("dots").textContent = ""; // Clear dots text
+
+                const statusElement = document.getElementById("server-status");
+                statusElement.textContent = "Server je Offline";
+                statusElement.classList.add("offline");
+                statusElement.classList.remove("online");
+
+                // Show message that statistics couldn't be loaded
+                document.getElementById("player-info").innerHTML = "Server je offline, nemožno načítať štatistiky.";
+            }
+        }
+
+        // Check server status on load
+        checkServerStatus();
+
+        // Optional: Refresh status every minute
+        setInterval(checkServerStatus, 60000); // Check every 60 seconds
+    </script>
 </body>
 </html>
