--- a/navbar.html
+++ b/navbar.html
@@ -2,12 +2,18 @@
 <header class="header">
     <div class="navbar">
         <a href="index.html">Domov</a>
+        
+        <!-- Dropdown Menu for "Informácie" -->
         <div class="dropdown">
             <a href="#">Informácie</a>
             <div class="dropdown-content">
                 <a href="otvaracie_casy.html">Otvaracie časy</a>
+                <a href="pravidla.html">Pravidlá servera</a> <!-- Placeholder for server rules -->
+                <a href="galeria.html">Galéria</a> <!-- Placeholder for gallery -->
+                <a href="novinky.html">Novinky</a> <!-- Placeholder for news -->
             </div>
         </div>
+        
         <a href="https://discord.gg/dTTdNrgBSM" target="_blank">Discord</a>
     </div>
 </header>
