--- a/index.html
+++ b/index.html
@@ -20,78 +20,6 @@
             min-height: 100vh;
         }
 
-        /* Header and navigation styles */
-        .header {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background-color: #1a1a1a;
-            padding: 10px 0;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            display: flex;
-            justify-content: center;
-            z-index: 1000;
-        }
-
-        .navbar {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-            position: relative;
-        }
-
-        .navbar a {
-            color: #ffffff;
-            text-decoration: none;
-            padding: 10px 20px;
-            font-size: 1em;
-        }
-
-        /* Dropdown menu styling */
-        .dropdown {
-            position: relative;
-            display: inline-block;
-        }
-
-        .dropdown > a::after {
-            content: " ▼";
-            font-size: 0.8em;
-        }
-
-        .dropdown-content {
-            position: absolute;
-            background-color: #333333;
-            min-width: 160px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            top: 100%; /* Position directly below the header */
-            left: 0;
-            margin-top: 5px; /* Adds a small gap between the header and dropdown */
-            opacity: 0;
-            transform: translateY(-10px);
-            transition: opacity 0.3s ease, transform 0.3s ease;
-            pointer-events: none; /* Prevents hover until visible */
-            z-index: 1000;
-        }
-
-        .dropdown-content a {
-            color: #ffffff;
-            padding: 10px 20px;
-            text-decoration: none;
-            display: block;
-            text-align: left;
-        }
-
-        .dropdown-content a:hover {
-            background-color: #444;
-        }
-
-        /* Show dropdown with animation */
-        .dropdown:hover .dropdown-content {
-            opacity: 1;
-            transform: translateY(0);
-            pointer-events: auto; /* Enable hover */
-        }
-
         /* Main container styling */
         .container {
             background-color: #1a1a1a;
@@ -137,22 +65,43 @@
             margin: 20px auto;
         }
     </style>
+
+    <!-- Inline script to generate the navbar and add styling -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const navbarHTML = `
+                <style>
+                    .header { position: fixed; top: 0; width: 100%; background-color: #1a1a1a; padding: 10px 0; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); display: flex; justify-content: center; z-index: 1000; }
+                    .navbar { display: flex; align-items: center; gap: 20px; }
+                    .navbar a { color: #ffffff; text-decoration: none; padding: 10px 20px; font-size: 1em; }
+                    .dropdown { position: relative; display: inline-block; }
+                    .dropdown > a::after { content: " ▼"; font-size: 0.8em; }
+                    .dropdown-content { display: none; position: absolute; background-color: #333333; min-width: 160px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); z-index: 1; top: 100%; opacity: 0; transform: translateY(-10px); transition: opacity 0.3s ease, transform 0.3s ease; }
+                    .dropdown-content a { color: #ffffff; padding: 10px 20px; text-decoration: none; display: block; text-align: left; }
+                    .dropdown-content a:hover { background-color: #444; }
+                    .dropdown:hover .dropdown-content { display: block; opacity: 1; transform: translateY(0); }
+                </style>
+                <header class="header">
+                    <div class="navbar">
+                        <a href="index.html">Domov</a>
+                        <div class="dropdown">
+                            <a href="#">Informácie</a>
+                            <div class="dropdown-content">
+                                <a href="otvaracie_casy.html">Otvaracie časy</a>
+                                <a href="pravidla.html">Pravidlá servera</a> <!-- Placeholder link for server rules -->
+                                <a href="galeria.html">Galéria</a> <!-- Placeholder link for gallery -->
+                                <a href="novinky.html">Novinky</a> <!-- Placeholder link for news -->
+                            </div>
+                        </div>
+                        <a href="https://discord.gg/dTTdNrgBSM" target="_blank">Discord</a>
+                    </div>
+                </header>
+            `;
+            document.body.insertAdjacentHTML("afterbegin", navbarHTML);
+        });
+    </script>
 </head>
 <body>
-    <!-- Header with dropdown menu -->
-    <header class="header">
-        <div class="navbar">
-            <a href="index.html">Domov</a>
-            <div class="dropdown">
-                <a href="#">Informácie</a>
-                <div class="dropdown-content">
-                    <a href="otvaracie_casy.html">Otvaracie časy</a>
-                </div>
-            </div>
-            <a href="https://discord.gg/dTTdNrgBSM" target="_blank">Discord</a>
-        </div>
-    </header>
-
     <!-- Main content container -->
     <div class="container">
         <h1>Minecraft Server SOSCH</h1>
