--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 
         <hr>
 
-        <div class="info">
-            <a href="otvaracie_casy.html">Otvaracie časy</a>
+        <div // class="info">
+            <a // href="otvaracie_casy.html">Otvaracie časy</a>
         </div>
     </div>
 
