--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 
         <hr>
 
-        <div // class="info">
-            <a // href="otvaracie_casy.html">Otvaracie časy</a>
-        </div>
+      //  <div class="info">
+      //      <a href="otvaracie_casy.html">Otvaracie časy</a>
+      //   </div>
     </div>
 
     <script>
