--- a/pravidla.html
+++ b/pravidla.html
@@ -1,1 +1,68 @@
 
+<!DOCTYPE html>
+<html lang="sk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pravidlá servera - Minecraft Server SOSCH</title>
+    <style>
+        /* Basic reset and styling */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #2e2e2e;
+            color: #ffffff;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
+        .container {
+            background-color: #1a1a1a;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            max-width: 600px;
+            width: 90%;
+            text-align: center;
+            margin-top: 80px; /* Space for fixed header */
+        }
+        h1 {
+            font-size: 2em;
+            color: #f0d600;
+            margin-bottom: 20px;
+        }
+        .rules {
+            text-align: left;
+        }
+        .rules h2 {
+            color: #f0d600;
+            margin-bottom: 10px;
+        }
+        .rules ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .rules ul li {
+            margin-bottom: 10px;
+            padding-left: 10px;
+        }
+        a {
+            color: #0d9dff;
+            text-decoration: none;
+            display: inline-block;
+            margin-top: 20px;
+        }
+    </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const navbarHTML = `
+                <style>
+                    .header { position: fixed; top: 0; width: 100%; background-color: #1a1a1a; padding: 10px 0; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); display: flex; justify-content: center; z-index: 1000; }
+                    .navbar { display: flex; align-items: center; gap: 20px; }
+                    .navbar a { color: #ffffff; text-decoration: none; padding: 10px 20px; font-size: 1em; }
+                    .dropdown { position: relative; display: inline-block; }
+                    .dropdown > a::after { content: " ▼"; font-size: 0.8em; }
+                    .dropdown-content { display: none; position: absolute; background-color: #333333; min-width: 160px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); z-index: 1; top: 100%; opacity: 0; transform: translateY(-
