--- a/pravidla.html
+++ b/pravidla.html
@@ -95,10 +95,11 @@
         <div class="rules">
             <h2>Pravidlá pre Kráter:</h2>
             <ul>
-                <li>1. Žiadne ničenie stavieb v kráteri.</li>
+                <li>1. Žiadne ničenie cudzích stavieb v kráteri.</li>
                 <li>2. Žiadne škaredé stavby v kráteri.</li>
                 <li>3. Neútočte na ľudí v kráteri.</li>
-                <li>4. Nezaberajte pozemok pre vašu frakciu v kráteri.</li>
+                <li>4. Nezaberajte územie pre vašu fakciu v kráteri.</li>
+                <li>5. Negriefujte v kráteri! (Nekradnite,Nezabijajte,Neničte).</li>
             </ul>
             <h3>Mimo kráteru platí len jedno pravidlo:</h3>
             <p>5. Prežiť!</p>
