--- a/novinky.html
+++ b/novinky.html
@@ -12,6 +12,7 @@
             color: #ffffff;
             padding: 0;
             margin: 0;
+            text-align: center;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -25,7 +26,7 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            max-width: 800px;
+            max-width: 600px;
             width: 90%;
             margin-top: 80px; /* Space for fixed header */
         }
@@ -48,11 +49,18 @@
 
         .article h2 {
             color: #f0d600;
+            font-size: 1.5em;
         }
 
         a {
             color: #0d9dff;
             text-decoration: none;
+        }
+
+        hr {
+            border: 1px solid #444;
+            width: 80%;
+            margin: 20px auto;
         }
     </style>
 
@@ -64,11 +72,25 @@
                     .header { position: fixed; top: 0; width: 100%; background-color: #1a1a1a; padding: 10px 0; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); display: flex; justify-content: center; z-index: 1000; }
                     .navbar { display: flex; align-items: center; gap: 20px; }
                     .navbar a { color: #ffffff; text-decoration: none; padding: 10px 20px; font-size: 1em; }
+                    .dropdown { position: relative; display: inline-block; }
+                    .dropdown > a::after { content: " ▼"; font-size: 0.8em; }
+                    .dropdown-content { display: none; position: absolute; background-color: #333333; min-width: 160px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); z-index: 1; top: 100%; opacity: 0; transform: translateY(-10px); transition: opacity 0.3s ease, transform 0.3s ease; }
+                    .dropdown-content a { color: #ffffff; padding: 10px 20px; text-decoration: none; display: block; text-align: left; }
+                    .dropdown-content a:hover { background-color: #444; }
+                    .dropdown:hover .dropdown-content { display: block; opacity: 1; transform: translateY(0); }
                 </style>
                 <header class="header">
                     <div class="navbar">
                         <a href="index.html">Domov</a>
-                        <a href="novinky.html">Novinky</a>
+                        <div class="dropdown">
+                            <a href="#">Informácie</a>
+                            <div class="dropdown-content">
+                                <a href="otvaracie_casy.html">Otvaracie časy</a>
+                                <a href="pravidla.html">Pravidlá servera</a>
+                                <a href="galeria.html">Galéria</a>
+                                <a href="novinky.html">Novinky</a>
+                            </div>
+                        </div>
                         <a href="https://discord.gg/dTTdNrgBSM" target="_blank">Discord</a>
                     </div>
                 </header>
@@ -86,6 +108,13 @@
             <p><strong>Java IP:</strong> taking-superior.gl.joinmc.link &rarr; <strong>community-killed.gl.joinmc.link => 127.0.0.1:25565</strong></p>
             <p><strong>Bedrock IP:</strong> ability-counter.gl.at.ply.gg:3070 &rarr; <strong>127.0.0.1:19132</strong></p>
             <p>Tieto zmeny budú aplikované čoskoro. Prosím aktualizujte vaše pripojenia!</p>
+        </div>
+
+        <hr>
+
+        <div class="article">
+            <h2>Nový Event</h2>
+            <p>Pripravte sa na náš nadchádzajúci event, kde môžete vyhrať zaujímavé ceny a užiť si skvelé dobrodružstvo!</p>
         </div>
     </div>
 </body>
