--- a/novinky.html
+++ b/novinky.html
@@ -105,7 +105,7 @@
         <div class="article">
             <h2>Zmena IP pre Bedrock a Java</h2>
             <p>Od:</p>
-            <p><strong>Java IP:</strong> taking-superior.gl.joinmc.link &rarr; <strong>community-killed.gl.joinmc.link => 127.0.0.1:25565</strong></p>
+            <p><strong>Java IP:</strong> taking-superior.gl.joinmc.link &rarr; <strong>community-killed.gl.joinmc.link</strong></p>
             <p><strong>Bedrock IP:</strong> ability-counter.gl.at.ply.gg:3070 &rarr; <strong>127.0.0.1:19132</strong></p>
             <p>Tieto zmeny budú aplikované čoskoro. Prosím aktualizujte vaše pripojenia!</p>
         </div>
