--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <a href="pravidla.html">Pravidlá servera</a>
                                 <a href="galeria.html">Galéria</a>
                                 <a href="novinky.html">Novinky</a>
-                                <a href="p-bc.gl.at.ply.gg:56345">Novinky</a>
+                                <a href="http://p-bc.gl.at.ply.gg:56345">Mapa</a>
                             </div>
                         </div>
                         <a href="https://discord.gg/dTTdNrgBSM" target="_blank">Discord</a>
