--- a/index.html
+++ b/index.html
@@ -200,4 +200,45 @@
         try {
             const response = await fetch(apiUrl);
             const data = await response.json();
-            clearInterval(dotsInterval
+            clearInterval(dotsInterval);
+            document.getElementById("dots").textContent = "";
+
+            const statusElement = document.getElementById("server-status");
+            const playersElement = document.getElementById("player-info");
+
+            if (data.online) {
+                statusElement.textContent = "Server je Online";
+                statusElement.classList.add("online");
+                statusElement.classList.remove("offline");
+
+                if (data.players) {
+                    const onlinePlayers = data.players.online;
+                    const maxPlayers = data.players.max;
+                    playersElement.innerHTML = `Počet hráčov online: ${onlinePlayers}/${maxPlayers}`;
+                }
+            } else {
+                statusElement.textContent = "Server je Offline";
+                statusElement.classList.add("offline");
+                statusElement.classList.remove("online");
+                playersElement.innerHTML = "Server je offline, nemožno načítať štatistiky.";
+            }
+        } catch (error) {
+            console.error('Chyba pri kontrole stavu servera:', error);
+            clearInterval(dotsInterval);
+            document.getElementById("dots").textContent = "";
+
+            const statusElement = document.getElementById("server-status");
+            statusElement.textContent = "Server je Offline";
+            statusElement.classList.add("offline");
+            statusElement.classList.remove("online");
+
+            document.getElementById("player-info").innerHTML = "Server je offline, nemožno načítať štatistiky.";
+        }
+    }
+
+    checkServerStatus();
+    setInterval(checkServerStatus, 60000); // Check every 60 seconds
+</script>
+
+</body>
+</html>
