--- a/otvaracie_casy.html
+++ b/otvaracie_casy.html
@@ -83,6 +83,7 @@
                                 <a href="pravidla.html">Pravidlá servera</a>
                                 <a href="galeria.html">Galéria</a>
                                 <a href="novinky.html">Novinky</a>
+                                <a href="map.html">Mapa</a>
                             </div>
                         </div>
                         <a href="https://discord.gg/dTTdNrgBSM" target="_blank">Discord</a>
