--- a/index.html
+++ b/index.html
@@ -240,5 +240,12 @@
     setInterval(checkServerStatus, 60000); // Check every 60 seconds
 </script>
 
+<!-- index.html -->
+<script>
+  window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/speed-insights/script.js"></script>
+
+
 </body>
 </html>
