--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
     <div class="info">
         <h3>Recource Pack (Java):</h3>
-        <p><a href="https://drive.google.com/file/d/1dQhAAmrstsj-_ObNwIOHqAY4gAvjoepX/view?usp=sharing" target="_blank">Ak sa vam automaticky nestiahne</a></p>
+        <p><a href="https://drive.usercontent.google.com/u/0/uc?id=1dQhAAmrstsj-_ObNwIOHqAY4gAvjoepX&export=download" target="_blank">Ak sa vam automaticky nestiahne</a></p>
     </div>
 </div>
 
